syntax = "proto3";
package com.aws.protobuf;
option java_outer_classname = "OrderCreateMessage";

import "google/protobuf/timestamp.proto";

enum OrderType {
  BUY = 0;
  SALE = 1;
}

enum OrderStatus {
    NEW = 0;
    PARTIALLY_EXECUTED = 1;
    EXECUTED = 2;
    PARTIALLY_CANCELLED = 3;
    CANCELLED = 4;
}

message OrderCreatedEvent {
  int64 order_id = 1;
  int64 user_id = 2;
  int64 portfolio_id = 3;
  string instrument_name = 4;
  string piece_price = 5;
  int64 count = 6;
  int64 executed_count = 7;
  string total = 8;
  OrderType type = 9;
  OrderStatus status = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}